kubernetes/opentelemetry-operator/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-operator
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    openshift.io/cluster-monitoring: "true"
